--- a/App.css
+++ b/App.css
@@ -1,47 +1,86 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: darkslategrey;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: popins sans-serif;
 }
+
 .container {
     width: 500px;
     margin: 20px auto;
+    margin-top: -250px;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: darkslategrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
+.todo-list{
+    width: 550px;
+    padding: 20px;
+    box-shadow: 0 10px 40px rgb(0, 0, 0, 0.1);
+    border-radius: 5px;
+    background-color: white;
+    
+    
 }
 .heading{
     text-align: center;
-    color: white;
+    color: chartreuse;  
     margin-top: 100px;
+    margin-top: -20px;
+    margin-bottom: 50px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: oblique;
+    font-size: 80px;
+    
 }
-.form {
-    margin-top: 50px;
+#newtask {
+    margin-top: 20px;
     background-color: #eee;
     padding: 30px;
     display: flex;
     align-items: center;
     border-radius: 12px;
+    
 }
-.input {
+
+.input-bar {
     padding: 10px;
     border: 1px solid;
     border-radius: 2px;
     outline: none;
     flex: 1;
+    outline: none;
 }
 
-.add {  
-    background-color: red;
+.addtoTask {  
+    background-color: blue;
     color: white;
     padding: 10px;
     margin-left: 10px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    opacity: .6;
+    
 }
-.tasks {
-    background-color: #eee;
-    margin-top: 20px;
-    border-radius: 6px;
-    padding: 20px;
+.addtoTask.active{  
+    opacity: 1;
+    pointer-events: all;
 }
 
-
-
+.tasks { 
+    margin-top: 30px;
+    width: 100%;
+}
 .delete-btn {
     padding: 12px;
     text-align: center;
@@ -51,4 +90,43 @@ body {
     margin-top: 20px;
     cursor: pointer;
     border-radius: 4px;
+    width: 539px;
+}
+.itemBlock{
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    box-shadow: 0 10px 30px rgb(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.itemBlock p{
+    font-size: 16px;
+    font-weight: 500px;
+    color: #111;
+    letter-spacing: 1px;
+}
+
+.itemBlock.completed p{
+    text-decoration: line-through;
+    color: red;
+}
+
+.icon-btn   {
+    display: flex;
+    gap: 10px;
+    color: rgb(8, 6, 113);
+    font-size: 18px;  
+    align-items: center;
+}
+
+.icon-btni {
+    color: rgb(8, 6, 113);
+    font-size: 18px;
+    cursor: pointer;
+ 
+   
 }
