--- a/App.css
+++ b/App.css
@@ -37,9 +37,9 @@ body {
 
 .todo-list{
     width: 550px;
-    padding: 20px;
+    padding: 40px;
     box-shadow: 0 10px 40px rgb(0, 0, 0, 0.1);
-    border-radius: 5px;
+    border-radius: 30px;
     background-color: white;
     
     
@@ -61,10 +61,11 @@ body {
     outline: none;
     flex: 1;
     outline: none;
+    font-size: 16px;
 }
 
 .addtoTask-btn {  
-    background-color: blue;
+    background-color: pink;
     color: white;
     padding: 10px;
     margin-left: 10px;
@@ -73,11 +74,17 @@ body {
     border: none;
     border-radius: 5px;
     opacity: .6;
+    font-size: 16.5px;
+    background-color: blue;
     
 }
+
 .addtoTask-btn.active{  
     opacity: 1;
     pointer-events: all;
+    background-color: darkorchid; 
+     
+   
 }
 
 .tasks { 
@@ -117,8 +124,8 @@ body {
     font-weight: 500px;
     color: #111;
     letter-spacing: 1px;
-    background-color: red;
     padding: 10px;
+    margin-left: 15px;
 }
 
 .fa-sharp {
@@ -144,4 +151,40 @@ body {
 .itemBlock.completed p{
     text-decoration: line-through;
     color: red;
+}
+.parag{
+    margin-left: 20px;
+    color: indigo;
+    margin-top: 10px;
+    font-size: 18.5px;
+    font-style: calc();
+  
+}
+.clearall{
+    width: 30vh;
+    margin-top: 30px;
+    text-align: center;
+    background-color: #fd0606;
+    color: white;
+    padding: 12px;
+    border-radius: 5px;
+    font-size: 14px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 16px;
+    text-shadow: 12px;
+    border: none;
+    border-radius: 5px;
+    opacity: .7;
+    
+      
+}
+.clearall:hover{
+    opacity: 6;
+    color: ghostwhite;
+    
+}
+
+.btn{
+    margin-right: 50px;
 }
