--- a/App.css
+++ b/App.css
@@ -1,42 +1,35 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: popins sans-serif;
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: darkslategrey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .container {
-    width: 500px;
     margin: 20px auto;
-    margin-top: -250px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;   
 }
 
 .heading{
-    text-align: center;
+    align-self: center;
     color: chartreuse;  
-    margin-top: 100px;
-    margin-top: -20px;
-    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: oblique;
     font-size: 80px;
     font-style: oblique;
-    font-size: 80px;
-    
+    font-size: 80px;    
 }
 
+
+
 .todo-list{
-    width: 550px;
+    width: 450px;
     padding: 40px;
     box-shadow: 0 10px 40px rgb(0, 0, 0, 0.1);
     border-radius: 30px;
@@ -50,7 +43,6 @@ body {
     background-color: #eee;
     padding: 30px;
     display: flex;
-    align-items: center;
     border-radius: 12px;  
 }
 
@@ -76,12 +68,12 @@ body {
     opacity: .6;
     font-size: 16.5px;
     background-color: blue;
-    
+    cursor: not-allowed;
 }
 
 .addtoTask-btn.active{  
     opacity: 1;
-    pointer-events: all;
+    cursor: pointer;
     background-color: darkorchid; 
      
    
@@ -90,11 +82,14 @@ body {
 .tasks { 
     margin-top: 30px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     
 }
 .tasks div{ 
  background-color: #eee;
- padding: 6px;
  border-radius: 6px;
  margin-top: 4px;
  justify-content: space-between;
@@ -103,13 +98,13 @@ body {
  color: black;
  font-weight: 500px;
  font-family: Arial, Helvetica, sans-serif;
- padding: 7px;
+ padding: 4px;
 
  
 }
 
 .itemBlock{
-    padding: 10px;
+    padding: 2px;
     border-radius: 5px;
     margin-bottom: 20px;
     margin-top: 15px;
@@ -126,6 +121,7 @@ body {
     letter-spacing: 1px;
     padding: 10px;
     margin-left: 15px;
+    
 }
 
 .fa-sharp {
@@ -160,10 +156,10 @@ body {
     font-style: calc();
   
 }
+
 .clearall{
-    width: 30vh;
+    width: calc(50% - 2em);
     margin-top: 30px;
-    text-align: center;
     background-color: #fd0606;
     color: white;
     padding: 12px;
@@ -186,5 +182,7 @@ body {
 }
 
 .btn{
+    display: flex;
     margin-right: 50px;
+    flex-direction: column;
 }
